--- a/Trabalho Curricularização/contatos.html
+++ b/Trabalho Curricularização/contatos.html
@@ -7,7 +7,87 @@
   <link rel="stylesheet" href="contatosstyle.css">
 </head>
 <body>
+  <header><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ACAPRA – Contatos Disponíveis</title>
+  <link rel="stylesheet" href="teladoacaostyle.css"/>
+</head>
+<body>
   <header>
+    <nav>
+      <ul class="menu">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">HISTÓRIA DA ACAPRA</a></li>
+        <li><a href="#">DOAÇÃO</a></li>
+        <li><a href="#">HISTÓRIA DOS ANIMAIS</a></li>
+        <li><a href="#">ESTATÍSTICAS</a></li>
+        <li><a href="#">NOTÍCIAS</a></li>
+        <li><a href="#">MAUS TRATOS</a></li>
+        <li><a href="#">FORMULÁRIO</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="contacts">
+      <h2>CONTATOS DISPONÍVEIS</h2>
+      <div class="contacts-list">
+       
+        <div class="contact-card">
+          <div class="icon"></div>
+          <div class="info">
+            <p><strong>Nome:</strong> -----</p>
+            <p><strong>Telefone:</strong> -----</p>
+            <p><strong>Endereço:</strong> -----</p>
+            <p><strong>Horário:</strong> -----</p>
+          </div>
+        </div>
+       
+        <div class="contact-card">
+          <div class="icon"></div>
+          <div class="info">
+            <p><strong>Nome:</strong> -----</p>
+            <p><strong>Telefone:</strong> -----</p>
+            <p><strong>Endereço:</strong> -----</p>
+            <p><strong>Horário:</strong> -----</p>
+          </div>
+        </div>
+        <div class="contact-card">
+          <div class="icon"></div>
+          <div class="info">
+            <p><strong>Nome:</strong> -----</p>
+            <p><strong>Telefone:</strong> -----</p>
+            <p><strong>Endereço:</strong> -----</p>
+            <p><strong>Horário:</strong> -----</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+ 
+  <footer>
+    <div class="footer-content">
+      <div class="footer-item">
+        <div class="paw"></div>
+        <div class="pix">
+          <p>QUER AJUDAR VIA PIX?<br/>
+          <strong>CNPJ = 03.772.251.0001-82</strong></p>
+        </div>
+      </div>
+      <div class="footer-item">
+        <h1>ACAPRA</h1>
+      </div>
+      <div class="footer-item">
+        <p>"TRANSFORME VIDAS:<br/>
+        ADOTE UM AMIGO FIEL HOJE!"</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
     <nav>
       <ul class="menu">
         <li>HOME</li>
