--- a/Trabalho Curricularização/doacoes.html
+++ b/Trabalho Curricularização/doacoes.html
@@ -3,79 +3,72 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ACAPRA – Contatos Disponíveis</title>
-  <link rel="stylesheet" href="teladoacaostyle.css"/>
+  <title>ACAPRA – Doações Possíveis</title>
+  <link rel="stylesheet" href="doacoesstyle.css" />
 </head>
 <body>
+
   <header>
     <nav>
       <ul class="menu">
         <li><a href="#">HOME</a></li>
         <li><a href="#">HISTÓRIA DA ACAPRA</a></li>
-        <li><a href="#">DOAÇÃO</a></li>
         <li><a href="#">HISTÓRIA DOS ANIMAIS</a></li>
         <li><a href="#">ESTATÍSTICAS</a></li>
         <li><a href="#">NOTÍCIAS</a></li>
         <li><a href="#">MAUS TRATOS</a></li>
-        <li><a href="#">FORMULÁRIO</a></li>
+        <li><a href="#">CONTATO</a></li>
       </ul>
     </nav>
   </header>
+
   <main>
-    <section class="contacts">
-      <h2>CONTATOS DISPONÍVEIS</h2>
-      <div class="contacts-list">
-       
-        <div class="contact-card">
-          <div class="icon"></div>
-          <div class="info">
-            <p><strong>Nome:</strong> -----</p>
-            <p><strong>Telefone:</strong> -----</p>
-            <p><strong>Endereço:</strong> -----</p>
-            <p><strong>Horário:</strong> -----</p>
-          </div>
+  
+    <section class="donations-header">
+      <img src="paw.png" alt="Pata" class="icon-paw">
+      <h2>DOAÇÕES POSSÍVEIS</h2>
+      <img src="paw.png" alt="Pata" class="icon-paw">
+    </section>
+
+   
+    <section class="donations-content">
+      <div class="donation-box">
+        <div class="donation-image">
+          <img src="dog4.png" alt="Cachorro com tigela">
         </div>
-       
-        <div class="contact-card">
-          <div class="icon"></div>
-          <div class="info">
-            <p><strong>Nome:</strong> -----</p>
-            <p><strong>Telefone:</strong> -----</p>
-            <p><strong>Endereço:</strong> -----</p>
-            <p><strong>Horário:</strong> -----</p>
-          </div>
+        <div class="donation-text">
+          <p><strong>Doações financeiras:</strong> As contribuições monetárias são essenciais para cobrir despesas com alimentação, cuidados veterinários e outros custos operacionais.</p>
+          <p><strong>Doações de suprimentos:</strong> Itens como ração, medicamentos, produtos de limpeza e materiais para cuidados dos animais são sempre bem-vindos.</p>
+          <p><strong>Apadrinhamento:</strong> Através do programa de apadrinhamento, é possível contribuir mensalmente para os cuidados de um animal específico, auxiliando nas despesas com alimentação e saúde.</p>
+          <p><strong>Voluntariado:</strong> Além de doações materiais, conta com o apoio de voluntários que auxiliam em diversas atividades, como eventos de adoção, campanhas de conscientização e cuidados diretos com os animais.</p>
         </div>
-        <div class="contact-card">
-          <div class="icon"></div>
-          <div class="info">
-            <p><strong>Nome:</strong> -----</p>
-            <p><strong>Telefone:</strong> -----</p>
-            <p><strong>Endereço:</strong> -----</p>
-            <p><strong>Horário:</strong> -----</p>
-          </div>
-        </div>
+      </div>
+    </section>
+
+
+    <section class="collection-points">
+      <h3>PONTOS DE COLETAS</h3>
+      <div class="points-list">
+        <div class="point">Ponto de Coleta 1</div>
+        <div class="point">Ponto de Coleta 2</div>
+        <div class="point">Ponto de Coleta 3</div>
+        <div class="point">Ponto de Coleta 4</div>
       </div>
     </section>
   </main>
 
- 
   <footer>
-    <div class="footer-content">
-      <div class="footer-item">
-        <div class="paw"></div>
-        <div class="pix">
-          <p>QUER AJUDAR VIA PIX?<br/>
-          <strong>CNPJ = 03.772.251.0001-82</strong></p>
-        </div>
-      </div>
-      <div class="footer-item">
-        <h1>ACAPRA</h1>
-      </div>
-      <div class="footer-item">
-        <p>"TRANSFORME VIDAS:<br/>
-        ADOTE UM AMIGO FIEL HOJE!"</p>
-      </div>
+    <div class="footer-section footer-left">
+      <img src="paw.png" alt="Pata" class="icon-paw">
+      <p>QUER AJUDAR VIA PIX?<br>CNPJ = 03.772.251.0001-82</p>
+    </div>
+    <div class="footer-section footer-center">
+      <h1>ACAPRA</h1>
+    </div>
+    <div class="footer-section footer-right">
+      <p>“TRANSFORME VIDAS:<br>ADOTE UM AMIGO FIEL HOJE!”</p>
     </div>
   </footer>
+
 </body>
 </html>
