--- a/Trabalho Curricularização/index.html
+++ b/Trabalho Curricularização/index.html
@@ -11,13 +11,13 @@
 <nav>
   <ul class="menu">
     <li><a href="index.html">HOME</a></li>
-    <li><a href="historia.html">HISTÓRIA DA ACAPRA</a></li>
-    <li><a href="doacao.html">DOAÇÃO</a></li>
+    <li><a href="capra.html">HISTÓRIA DA ACAPRA</a></li>
+    <li><a href="doacoes.html">DOAÇÃO</a></li>
     <li><a href="animais.html">ANIMAIS</a></li>
     <li><a href="estatisticas.html">ESTATÍSTICAS</a></li>
     <li><a href="noticias.html">NOTÍCIAS</a></li>
-    <li><a href="maus-tratos.html">MAUS TRATOS</a></li>
-    <li><a href="contato.html">CONTATO</a></li>
+    <li><a href="denuncia.html">MAUS TRATOS</a></li>
+    <li><a href="contatos.html">CONTATO</a></li>
   </ul>
 </nav>
 
@@ -65,16 +65,16 @@
 
   </section>
 
-  <footer>
-    <br><br>
-    <div class="instagram">
-      <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram" />
-
-      <span>@acaprabrusquesc</span>
-
-    </div>
+<footer>
   <br><br>
-  </footer>
+  <div class="instagram">
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram" />
+    <span>
+      <a href="https://www.instagram.com/acaprabrusquesc/" target="_blank" rel="noopener noreferrer" class="menu-link">Instagram</a>
+    </span>
+  </div>
+  <br><br>
+</footer>
 
 </body>
 
