--- a/Trabalho Curricularização/contatos.html
+++ b/Trabalho Curricularização/contatos.html
@@ -4,35 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contatos - ACAPRA</title>
-  <link rel="stylesheet" href="contatosstyle.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header><!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ACAPRA – Contatos Disponíveis</title>
-  <link rel="stylesheet" href="teladoacaostyle.css"/>
-</head>
+
 <body>
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">HISTÓRIA DA ACAPRA</a></li>
-        <li><a href="#">DOAÇÃO</a></li>
-        <li><a href="#">HISTÓRIA DOS ANIMAIS</a></li>
-        <li><a href="#">ESTATÍSTICAS</a></li>
-        <li><a href="#">NOTÍCIAS</a></li>
-        <li><a href="#">MAUS TRATOS</a></li>
-        <li><a href="#">FORMULÁRIO</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="capra.html">HISTÓRIA DA ACAPRA</a></li>
+        <li><a href="doacoes.html">DOAÇÃO</a></li>
+        <li><a href="animais.html">ANIMAIS</a></li>
+        <li><a href="estatisticas.html">ESTATÍSTICAS</a></li>
+        <li><a href="noticias.html">NOTÍCIAS</a></li>
+        <li><a href="denuncia.html">MAUS TRATOS</a></li>
+        <li><a href="contatos.html">CONTATO</a></li>
       </ul>
     </nav>
+    
   </header>
-  <main>
     <section class="contacts">
-      <h2>CONTATOS DISPONÍVEIS</h2>
+      <br><br>
+      <h1 class="titulo">CONTATOS DISPONÍVEIS</h1>
+      <br><br><br>
       <div class="contacts-list">
        
         <div class="contact-card">
@@ -63,91 +57,44 @@
             <p><strong>Horário:</strong> -----</p>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
-
- 
-  <footer>
-    <div class="footer-content">
-      <div class="footer-item">
-        <div class="paw"></div>
-        <div class="pix">
-          <p>QUER AJUDAR VIA PIX?<br/>
-          <strong>CNPJ = 03.772.251.0001-82</strong></p>
+        <div class="contact-card">
+          <div class="icon"></div>
+          <div class="info">
+            <p><strong>Nome:</strong> -----</p>
+            <p><strong>Telefone:</strong> -----</p>
+            <p><strong>Endereço:</strong> -----</p>
+            <p><strong>Horário:</strong> -----</p>
+          </div>
+        </div>
+        <div class="contact-card">
+          <div class="icon"></div>
+          <div class="info">
+            <p><strong>Nome:</strong> -----</p>
+            <p><strong>Telefone:</strong> -----</p>
+            <p><strong>Endereço:</strong> -----</p>
+            <p><strong>Horário:</strong> -----</p>
+          </div>
         </div>
       </div>
-      <div class="footer-item">
-        <h1>ACAPRA</h1>
-      </div>
-      <div class="footer-item">
-        <p>"TRANSFORME VIDAS:<br/>
-        ADOTE UM AMIGO FIEL HOJE!"</p>
-      </div>
+    </section>
+
+  <br><br><br><br>
+
+  <footer class="rodape">
+
+    <div class="info">
+      <strong>QUER AJUDAR VIA PIX? <br> CNPJ = 03.772.251.0001-82</strong>
     </div>
+
+    <div class="marca">
+      <h1>ACAPRA</h1>
+    </div>
+
+    <div class="marca">
+      <strong>"TRANSFORME VIDAS:<br> ADOTE UM AMIGO FIEL HOJE!"</strong>
+    </div>
+
   </footer>
-</body>
-</html>
-    <nav>
-      <ul class="menu">
-        <li>HOME</li>
-        <li>HISTÓRIA DA ACAPRA</li>
-        <li>DOAÇÃO</li>
-        <li>HISTÓRIA DOS ANIMAIS</li>
-        <li>ESTATÍSTICAS</li>
-        <li>NOTÍCIAS</li>
-        <li>MAUS TRATOS</li>
-        <li>FORMULÁRIO</li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section class="contatos">
-      <h2 class="titulo-contato">CONTATOS DISPONÍVEIS</h2>
-
-      <div class="contato">
-        <img src="img/perfil.png" alt="Ícone de pessoa">
-        <div class="info">
-          <p><strong>Nome:</strong> ------</p>
-          <p><strong>Telefone:</strong> ------</p>
-          <p><strong>Endereço:</strong> ------</p>
-          <p><strong>Horário:</strong> ------</p>
-        </div>
-      </div>
-
-      <div class="contato">
-        <img src="img/perfil.png" alt="Ícone de pessoa">
-        <div class="info">
-          <p><strong>Nome:</strong> ------</p>
-          <p><strong>Telefone:</strong> ------</p>
-          <p><strong>Endereço:</strong> ------</p>
-          <p><strong>Horário:</strong> ------</p>
-        </div>
-      </div>
-
-      <div class="contato">
-        <img src="img/perfil.png" alt="Ícone de pessoa">
-        <div class="info">
-          <p><strong>Nome:</strong> ------</p>
-          <p><strong>Telefone:</strong> ------</p>
-          <p><strong>Endereço:</strong> ------</p>
-          <p><strong>Horário:</strong> ------</p>
-        </div>
-      </div>
-    </section>
-
-    <footer class="rodape">
-      <div class="pix">
-        <p><span class="icon">🐾</span><br>QUER AJUDAR VIA PIX?<br>CNPJ = 03.772.251.0001-82</p>
-      </div>
-      <div class="marca">
-        <h1>ACAPRA</h1>
-      </div>
-      <div class="mensagem">
-        <p>"TRANSFORME VIDAS:<br>ADOTE UM AMIGO FIEL HOJE!"</p>
-      </div>
-    </footer>
-  </main>
+ 
 </body>
 </html>
