--- a/Trabalho Curricularização/denuncia.html
+++ b/Trabalho Curricularização/denuncia.html
@@ -10,35 +10,49 @@
   <header>
     <nav>
       <ul class="menu">
-        <li>HOME</li>
-        <li>HISTÓRIA DA ACAPRA</li>
-        <li>DOAÇÃO</li>
-        <li>HISTÓRIA DOS ANIMAIS</li>
-        <li>ESTATÍSTICAS</li>
-        <li>NOTÍCIAS</li>
-        <li>CONTATO</li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="capra.html">HISTÓRIA DA ACAPRA</a></li>
+        <li><a href="doacoes.html">DOAÇÃO</a></li>
+        <li><a href="animais.html">ANIMAIS</a></li>
+        <li><a href="estatisticas.html">ESTATÍSTICAS</a></li>
+        <li><a href="noticias.html">NOTÍCIAS</a></li>
+        <li><a href="denuncia.html">MAUS TRATOS</a></li>
+        <li><a href="contatos.html">CONTATO</a></li>
       </ul>
     </nav>
+    
   </header>
 
   <main class="maus-tratos">
-    <h2 class="sec-title">
-      <span>🐾</span> MAUS TRATOS A ANIMAIS <span>🐾</span>
-    </h2>
 
-    <div class="banner-container">
-      <img src="img/banner-maus-tratos.png" alt="Maus tratos contra animais é crime. Denuncie." />
-    </div>
+    <br><br><br>
+
+  <h1 class="titulo">🐾 MAUS TRATOS A ANIMAIS 🐾</h1>
+
+    <br><br><br>
+
+  <div class="banner-container">
+    <img src="img/banner.png" alt="Maus tratos contra animais é crime. Denuncie." />
+  </div>
+
+  <div class="lei-container">
 
     <div class="lei-container">
+
+      <br>
+
       <h3>Lei nº 9.605/1998</h3>
+
       <p>
         Maltratar animais é crime no Brasil, conforme a 
         <strong>Lei nº 9.605/1998</strong>, a qual prevê sanções penais e administrativas,
         com penas que variam de três meses a um ano de detenção, além de multa.
       </p>
 
+      <br><br>
+
       <h3>Lei nº 14.064/2020</h3>
+
       <p>
         Para maus-tratos a cães e gatos, a 
         <strong>Lei nº 14.064/2020</strong> aumenta a pena para reclusão de dois a cinco anos. 
@@ -47,8 +61,28 @@
         eutanásia e transporte de animais, sempre visando minimizar o sofrimento.
       </p>
 
+      <br><br>
+
       <p class="disque-denuncia">Ligue para o <strong>181</strong></p>
+
+      <br><br>
+
     </div>
+
   </main>
+
+  <footer class="rodape">
+
+    <div class="info">
+      <p>🐾 <br> <strong>QUER AJUDAR VIA PIX?</strong><br> CNPJ = 03.772.251.0001-82</p>
+    </div>
+
+    <div class="marca">
+      <br>
+      <strong>"TRANSFORME VIDAS:<br> ADOTE UM AMIGO FIEL HOJE!"</strong>
+    </div>
+
+  </footer>
+
 </body>
 </html>
