--- a/Trabalho Curricularização/doacoes.html
+++ b/Trabalho Curricularização/doacoes.html
@@ -4,70 +4,101 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ACAPRA – Doações Possíveis</title>
-  <link rel="stylesheet" href="doacoesstyle.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
     <nav>
       <ul class="menu">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">HISTÓRIA DA ACAPRA</a></li>
-        <li><a href="#">HISTÓRIA DOS ANIMAIS</a></li>
-        <li><a href="#">ESTATÍSTICAS</a></li>
-        <li><a href="#">NOTÍCIAS</a></li>
-        <li><a href="#">MAUS TRATOS</a></li>
-        <li><a href="#">CONTATO</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="capra.html">HISTÓRIA DA ACAPRA</a></li>
+        <li><a href="doacoes.html">DOAÇÃO</a></li>
+        <li><a href="animais.html">ANIMAIS</a></li>
+        <li><a href="estatisticas.html">ESTATÍSTICAS</a></li>
+        <li><a href="noticias.html">NOTÍCIAS</a></li>
+        <li><a href="denuncia.html">MAUS TRATOS</a></li>
+        <li><a href="contatos.html">CONTATO</a></li>
       </ul>
     </nav>
+    
   </header>
 
   <main>
   
-    <section class="donations-header">
-      <img src="paw.png" alt="Pata" class="icon-paw">
-      <h2>DOAÇÕES POSSÍVEIS</h2>
-      <img src="paw.png" alt="Pata" class="icon-paw">
-    </section>
+   <section class="donations-header">
+    <div class="donations-title-wrapper">
+      
+      <br><br>
+
+      <h1 class="titulo">🐾DOAÇÕES POSSÍVEIS🐾</h1>
+
+      <br>
+
+    </div>
+  </section>
+
 
    
-    <section class="donations-content">
-      <div class="donation-box">
-        <div class="donation-image">
-          <img src="dog4.png" alt="Cachorro com tigela">
-        </div>
-        <div class="donation-text">
-          <p><strong>Doações financeiras:</strong> As contribuições monetárias são essenciais para cobrir despesas com alimentação, cuidados veterinários e outros custos operacionais.</p>
-          <p><strong>Doações de suprimentos:</strong> Itens como ração, medicamentos, produtos de limpeza e materiais para cuidados dos animais são sempre bem-vindos.</p>
-          <p><strong>Apadrinhamento:</strong> Através do programa de apadrinhamento, é possível contribuir mensalmente para os cuidados de um animal específico, auxiliando nas despesas com alimentação e saúde.</p>
-          <p><strong>Voluntariado:</strong> Além de doações materiais, conta com o apoio de voluntários que auxiliam em diversas atividades, como eventos de adoção, campanhas de conscientização e cuidados diretos com os animais.</p>
-        </div>
+<section class="donations-content">
+  <div class="donation-container">
+    <div class="donation-box">
+      <div class="donation-image">
+
+        <img src="img/tigela.PNG" alt="Cachorro com tigela">
+
       </div>
-    </section>
+
+      <div class="donation-text">
+        <p><strong>Doações financeiras:</strong> As contribuições monetárias são essenciais para cobrir despesas com alimentação, cuidados veterinários e outros custos operacionais.</p>
+        <br><p><strong>Doações de suprimentos:</strong> Itens como ração, medicamentos, produtos de limpeza e materiais para cuidados dos animais são sempre bem-vindos.</p>
+        <br><p><strong>Apadrinhamento:</strong> Através do programa de apadrinhamento, é possível contribuir mensalmente para os cuidados de um animal específico, auxiliando nas despesas com alimentação e saúde.</p>
+        <br><p><strong>Voluntariado:</strong> Além de doações materiais, conta com o apoio de voluntários que auxiliam em diversas atividades, como eventos de adoção, campanhas de conscientização e cuidados diretos com os animais.</p>
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
 
 
-    <section class="collection-points">
-      <h3>PONTOS DE COLETAS</h3>
-      <div class="points-list">
-        <div class="point">Ponto de Coleta 1</div>
-        <div class="point">Ponto de Coleta 2</div>
-        <div class="point">Ponto de Coleta 3</div>
-        <div class="point">Ponto de Coleta 4</div>
-      </div>
-    </section>
+
+<section class="collection-points">
+
+  <br>  
+
+  <h3>PONTOS DE COLETAS</h3>
+
+  <br><br>
+
+  <div class="points-list">
+    <div class="point">Ponto de Coleta 1</div>
+    <div class="point">Ponto de Coleta 2</div>
+    <div class="point">Ponto de Coleta 3</div>
+    <div class="point">Ponto de Coleta 4</div>
+  </div>
+
+  <br><br><br>
+
+</section>
+
   </main>
 
-  <footer>
-    <div class="footer-section footer-left">
-      <img src="paw.png" alt="Pata" class="icon-paw">
-      <p>QUER AJUDAR VIA PIX?<br>CNPJ = 03.772.251.0001-82</p>
+  <footer class="rodapeB">
+
+    <div class="info">
+      <strong>QUER AJUDAR VIA PIX?<br>CNPJ = 03.772.251.0001-82</strong>
     </div>
-    <div class="footer-section footer-center">
-      <h1>ACAPRA</h1>
+
+    <div class="marca">
+      <strong>ACAPRA</strong>
     </div>
-    <div class="footer-section footer-right">
-      <p>“TRANSFORME VIDAS:<br>ADOTE UM AMIGO FIEL HOJE!”</p>
+
+    <div class="info">
+      <strong>"TRANSFORME VIDAS:<br> ADOTE UM AMIGO FIEL HOJE!"</strong>
     </div>
+
   </footer>
 
 </body>
